Further work on Home Page. Reminder: Fix overlapping off title over nav bar

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,16 @@
-.home {
+.page-container {
+    width: 100%;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.home {
+    /* border: 1px solid #78A589; */
+    display: flex;
+    width: 1000px;
     justify-content: center;
     flex-direction: column;
     align-items: center; 
@@ -7,21 +18,30 @@
 
 .title-container {
     /* border: 1px solid #F00; */
+    position: relative;
+    display: flex;
+    align-items: center;
     padding: 75px;
-    text-align: center;
+    /* text-align: center; */
     width: 100%;
-    margin-top: 50px; 
-    margin-bottom: 50px;
+    margin-top: 25px; 
+    margin-bottom: 25px;
+    /* left: 25%; */
+    z-index: 1;
 }
 
 .title {
-    /* font-family: 'Charmini Extra Light'; */
+    /* border: 1px solid #F00; */
+    font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     font-weight: 400;
     font-size: 250%;
     line-height: 54px;
     display: flex;
     align-items: center;
+    /* position: relative; */
+    left: 250%;
+    z-index: 1;
 }
 
 .container {
@@ -51,7 +71,7 @@
 }
 
 .pillar {
-    /* border: 1px solid #F00; */
+    border: 1px solid #F00;
     position: relative; 
     justify-content: center;
     flex: 1;
@@ -59,12 +79,13 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px; 
+    margin-bottom: 0px; 
     overflow: visible;
 }
 
 .subtitle {
-    font-family: "Charmini Extra Light";
+    /* border: 1px solid #F00; */
+    font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     color: rgb(0, 0, 0);
     font-size: 24px;
@@ -72,11 +93,13 @@
 }
 
 .caption {
-    /* font-family: 'Charmini Extra Light'; */
+    border: 1px solid #3832aa;
+    font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     color: rgb(0, 0, 0);
     font-size: 20px;
     padding: 1em;
+    height: 300px;
 }
 
 .pic {
@@ -88,7 +111,8 @@
 }
 
 .description {
-    font-family: 'Charmini Extra Light';
+    /* border: 1px solid #F00; */
+    font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     color: rgb(0, 0, 0);
 }
@@ -121,6 +145,53 @@
     }
 } 
 
+.right-line {
+    position: relative;
+    flex-grow: 1;
+    height: 2px;
+    background-color: black;
+    margin: 0 15px;
+    text-align: center;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: -3.5px; 
+        width: 10px; 
+        height: 10px; 
+        background-color: black;
+        transform: rotate(45deg);
+    }
+
+    &::before {
+        left: 100%; 
+    }
+} 
+
+.left-line {
+    position: relative;
+    flex-grow: 1;
+    height: 2px;
+    background-color: black;
+    margin: 0 15px;
+    text-align: center;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: -3.5px; 
+        width: 10px; 
+        height: 10px; 
+        background-color: black;
+        transform: rotate(45deg);
+    }
+
+    &::after {
+        right: 100%; 
+    }
+} 
+
+
 @media (max-width: 768px) {
     .container {
         flex-direction: column; 
@@ -131,8 +202,17 @@
         margin-bottom: 10px;
     }
 
+    .right-line, .left-line {
+        width: 70%
+    }
+
     .border-with-diamonds {
-        width: 100%;
+        width: 50%;
+    }
+    .caption {
+        width: 50%;
+        height: 75px;
+        font-size: 18px; /* Adjust the font size for smaller screens if necessary */
     }
 }
 
@@ -142,7 +222,7 @@
     font-weight: normal;
     font-style: normal;
 } */
-
+/* 
 @font-face {
     font-family: 'charminilight';
     src: url('ldcharmini-light-webfont.woff2') format('woff2'),
@@ -150,4 +230,4 @@
     font-weight: normal;
     font-style: normal;
 
-}
+} */
